# Geo-News-AI

./: ReadMe.md
backend/: .gitignore  pyproject.toml
backend/backend/: __init__.py  main.py
backend/backend/conf/: config.py  cors.py  limiter.py
backend/backend/constants/: mapping.py
backend/backend/database/: db.py  db_init.py  models.py
backend/backend/enums/: category.py
backend/backend/middleware/: verify_admin.py
backend/backend/routes/: admin.py  analyze.py  posts.py
backend/backend/schemas/: admin.py  analyze.py  page.py  post.py
backend/backend/services/: ml_service.py  scraper_service.py
backend/backend/storage/: celery_app.py  redis.py  redis_service.py
backend/backend/utils/: datetime_helpers.py  helpers.py  paginate.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/analyze/: AnalyzeCard.tsx  AnalyzeCardSaved.tsx  AnalyzeCardSkeleton.tsx  AnalyzeEntities.tsx  AnalyzePredictions.tsx
frontend/src/components/dashboard/: DashboardContent.tsx
frontend/src/components/elements/: AsyncImage.tsx  Card.tsx  CategoryTag.tsx  Collapsible.tsx  Frame.tsx  Ghost.tsx  Image.tsx  KeywordTag.tsx  Pagination.tsx  Row.tsx  SentimentTag.tsx  ToolTip.tsx
frontend/src/contexts/: AccessKeyContext.tsx  DashboardContext.tsx  TablePostsContext.tsx
frontend/src/data/: daschboard.ts  navigation.ts
frontend/src/hooks/: useAccessKeyCtx.tsx  useDashboardCtx.tsx  useDetailPage.tsx  useExponentialBackoff.tsx  useMediaQeury.tsx  usePageTitle.tsx  usePostsQuery.tsx  usePostsTableQuery.tsx  useTablePostsCtx.tsx  useTextShortener.tsx
frontend/src/pages/: Analyze.tsx  Dashboard.tsx  News.tsx  NotFound.tsx  PostDetail.tsx
frontend/src/providers/: AccessKeyProvider.tsx  DashboardProvider.tsx  TablePostsProvider.tsx
frontend/src/redux/: hooks.ts  store.ts  types.ts
frontend/src/routes/: AppRoutes.tsx  routeTypes.tsx
frontend/src/styles/: index.css  root.css  theme.css
frontend/src/types/: analyze.ts  dashboard.ts  post.ts  typeGuards.ts
frontend/src/utils/: cardStatsHelpers.ts  helpers.ts  mapEntities.tsx  parseContent.tsx  sortHelpers.ts
ml-folder/: .gitignore  pyproject.toml
ml-folder/ml/conf/: config.py  constants.py
ml-folder/ml/core/: data_loader.py  model_loader.py  model_trainer.py  sentiment.py  summerize.py  theme_extractor.py
ml-folder/ml/utils/: helpers.py
scraper/: .gitignore  pyproject.toml
scraper/scraper/: run.py
scraper/scraper/conf/: chrome_driver.py  config.py  constants.py
scraper/scraper/core/: hash_manager.py  output_manager.py  scraper.py
scraper/scraper/utils/: enums.py  helpers.py  logger.py  process_data.py  validators.py
shared/: .gitignore  pyproject.toml
shared/shared/: schemas.py
(+67 files in other folders)
