[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper"
version = "0.1.0"
dependencies = [
	"shared",
	"annotated-types==0.7.0",
	"attrs==25.4.0",
	"certifi==2026.1.4",
	"h11==0.16.0",
	"idna==3.11",
	"outcome==1.3.0.post0",
	"pydantic==2.12.5",
	"pydantic-settings==2.12.0",
	"pydantic_core==2.41.5",
	"PySocks==1.7.1",
	"python-dotenv==1.2.1",
	"selenium==4.39.0",
	"sniffio==1.3.1",
	"sortedcontainers==2.4.0",
	"trio==0.32.0",
	"trio-websocket==0.12.2",
	"typing-inspection==0.4.2",
	"typing_extensions==4.15.0",
	"urllib3==2.6.2",
	"websocket-client==1.9.0",
	"wsproto==1.3.2"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "output*", "venv*"]